# KV-Comp-Analysis

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.api  Dockerfile.ui  LOOM_SCRIPT.md  LoomVideo.md  README.md  README_API.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-ui.txt  requirements.txt
app/: streamlit_app.py
data/: README.md
docs/screenshots/: README.md
pipeline/: generate_synthetic_sales.py
scripts/: api_config.py  api_main.py  api_models.py  build_atlas_mvp_exports.py  comp_analysis.py  comp_ranking_service.py  import_atlas_data.py  llm_service.py  normalize_calgary_current.py  smoke_test.py
tests/: conftest.py  test_comp_ranking.py  test_llm_service.py
